Fix text wrap issue

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -150,7 +150,9 @@ body {
     .todo-item {
         grid-template-columns: 3fr 1fr;
         width: 90%;
+        height: auto;
         margin: 0 auto;
+        overflow: scroll;
     }
 
     .todo-title {
